results/SVCOMP/4-shot/log-boolean1-2024_03_18_07_47_30.txt
import java.util.Random;

class boolean1 {

    //@ ensures \result <==> my_boolean == true || my_boolean == false;
    public static boolean fun() {
        boolean my_boolean = new Random().nextBoolean();
        // Boolean shall be either true or false.
        if (my_boolean == true) return true;
        if (my_boolean == false) return true;

        return false;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean1.java:5: error: cannot find symbol
    //@ ensures \result <==> my_boolean == true || my_boolean == false;
                             ^
  symbol:   variable my_boolean
  location: class boolean1
/home/max/Documents/JMLGPT/tmp/boolean1.java:5: error: cannot find symbol
    //@ ensures \result <==> my_boolean == true || my_boolean == false;
                                                   ^
  symbol:   variable my_boolean
  location: class boolean1
2 errors

